# pwreg

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
notebooks/: Explore_ProbabilityMaps.ipynb  NC_Control_Process.ipynb  NC_Control_Process_04042022.ipynb  NC_Control_Process_04082022.ipynb  NC_Control_Process_04212022_Detection.ipynb  NC_Control_Process_04212022_Segmentation.ipynb  NC_Control_Process_04262022_Register_Segment_Analyze.ipynb  NC_Control_Synapses.ipynb  NC_Control_Synapses_no_Registration.ipynb  NC_Control_View.ipynb  NC_Control_View_v03242022.ipynb  NC_Control_View_v04132022.ipynb  PWRwgister_ProbabilityMaps.ipynb  Register_ProbabilityMaps.ipynb  StimGenerator.ipynb  TestClasses.ipynb  Untitled.ipynb  info.txt
notebooks/napari_blob_detection/: Untitled.ipynb
pwreg/core/: core.py
pwreg/utils/: napari_utils.py  utils.py
pwreg/visualize/: viewers.py
src/pwreg/: __init__.py  core.py  napari_utils.py  synapse.py  utils.py  viewers.py
