[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwreg"
version = "0.0.2"
description='piece-wise registration'
readme = "README.md"
authors = [{ name = "Anna Nadtochiy", email = "nadtochi@usc.edu" }]
license = { file = "LICENSE" }
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
]
dependencies = [
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["bumpver","pytest"]

[project.urls] # Read The Docs will also go in here
Homepage = "https://github.com/LemonJust/pwreg"

[tool.bumpver]
current_version = "0.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"src/vodex/__init__.py" = ["{version}"]
